# instructor-playground

./: Makefile  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  refactor.md
.github/workflows/: CI.yml
mylib/: model.py
